--- a/templates/index.html
+++ b/templates/index.html
@@ -9,17 +9,20 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white" style = '  border-bottom: 1px solid rgb(228, 228, 228);'>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white" style = 'border-bottom: 1px solid rgb(228, 228, 228);'>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">HOW IT WORKS <span class="sr-only">Home</span></a>
+                    <a class="nav-link" href="/">SEARCH <span class="sr-only">Home</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="//codeply.com">ABOUT</a>
+                    <a class="nav-link" href="/howitworks">HOW IT WORKS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">ABOUT</a>
                 </li>
             </ul>
         </div>
@@ -31,7 +34,7 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control search-bar" placeholder="Search" aria-label="Recipient's username">
                     <div class="input-group-append"></div>
-                    <span class="input-group-text search-bar-icon"><i class="fa fa-search icon-search"></i></span>
+                    <span class="input-group-text search-bar-icon"><a href= '/requ'><i class="fa fa-search icon-search"></i></a></span>
                 </div>
             <img style="width:20rem; margin-bottom: 2rem;"src="../static/watching-tv.png">
         </div>
