--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,34 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style2.css')+'?q='+randn }}">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-    <title>Document</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white" style = 'border-bottom: 1px solid rgb(228, 228, 228);'>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarTogglerDemo01">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">SEARCH <span class="sr-only">Home</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/howitworks">HOW IT WORKS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/">ABOUT</a>
-                </li>
-            </ul>
-        </div>
-      </nav>
-    <div class='container'>
+{% extends 'base.html' %}
+
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='style2.css')+'?q='+randn }}">
+<title>TV Shows Finder</title>
+{% endblock %}
+
+{% block body %}
+<div class='container'>
+    <form style="padding:10px;", action="{{ url_for('search_tvshow') }}" method="post">
+                <div class="input-group mb-3">
+                    <input type="text" name="search_term"  class="form-control search-bar" placeholder="Search" aria-label="Recipient's username">
+                    <div class="input-group-append"></div>
+                    <button type="submit" class="input-group-text search-bar-icon"><i class="fa fa-search icon-search"></i></button>
+                    <!--<button type="submit" class="btn btn-primary">Submit</button>-->
+                </div>
+            </form>
     <div class="album py-5 bg-white">
           <div class="row">
             {% if tvshows|length > 0 %}
@@ -67,5 +53,4 @@
  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-</body>
-</html>
+{% endblock %}
