--- a/static/style.css
+++ b/static/style.css
@@ -29,8 +29,7 @@ h6{
     border: 1px solid rgba(0, 0, 0, 0.13);
 }
 
-
-.type{
+.genres{
     display: inline-block;
     color: #535353;
     margin-left: 10px;
