--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css')+'?q='+randn}}">
-<title>TV Shows Finder</title>
+<title>TV Shows Finder - Results</title>
 {% endblock %}
 
 {% block body %}
