Fixing bug and container tag in about

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,13 +7,12 @@
 
 {% block body %}
 
-<div class="container">
+<div class="container-home">
     <div class="box">
         <h3><strong>TV Shows Finder is built with:</strong></h3>
         <h5>Flask Framework, HTML, CSS & <a href="http://www.tvmaze.com/api">TVMaze API.</a></h5>
         <img style="width:20rem; margin-bottom: 2rem;"src="../static/watching-tv.png">
-        <h6>Made by <a href="https://github.com/thainapires">Thainá Pires.</a></h6>    
-
+        <h6>Made by <a href="https://github.com/thainapires">Thainá Pires.</a></h6>
     </div>
 </div>
 
